--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mnet-ui/react-scripts",
-  "version": "5.0.2",
+  "version": "5.0.2-alpha.0",
   "description": "Configuration and scripts for Create React App.",
   "repository": {
     "type": "git",
